[gd_scene load_steps=8 format=3 uid="uid://yy3al4bwcbp5"]

[ext_resource type="Texture2D" uid="uid://cw0koq6tgeydj" path="res://Tiles/white.png" id="1_ok3ui"]
[ext_resource type="Script" path="res://tile.gd" id="2_2pfcc"]
[ext_resource type="Texture2D" uid="uid://dkka0q0artbgi" path="res://Tiles/selection.png" id="3_2bn4u"]
[ext_resource type="AudioStream" uid="uid://ddeaj6o78bvrf" path="res://tile_invalid_move.wav" id="4_l3dg3"]
[ext_resource type="AudioStream" uid="uid://b81hi75vsa1j0" path="res://tile_move.wav" id="5_x0a11"]
[ext_resource type="AudioStream" uid="uid://dp0n3b881dd2i" path="res://tile_fall.wav" id="6_vm37w"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_r375d"]
size = Vector2(40, 40)

[node name="tile" type="Sprite2D"]
position = Vector2(4.76837e-07, 1.90735e-06)
scale = Vector2(1.25, 1.25)
texture = ExtResource("1_ok3ui")
script = ExtResource("2_2pfcc")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
visible = false
position = Vector2(2.38419e-07, -1.43051e-06)
shape = SubResource("RectangleShape2D_r375d")

[node name="RigidBody2D" type="RigidBody2D" parent="."]
input_pickable = true
gravity_scale = 0.0
freeze_mode = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="RigidBody2D"]
visible = false
position = Vector2(2.38419e-07, -1.43051e-06)
shape = SubResource("RectangleShape2D_r375d")

[node name="selection" type="Sprite2D" parent="."]
visible = false
position = Vector2(-3.8147e-07, -1.52588e-06)
texture = ExtResource("3_2bn4u")

[node name="TileInvalidMove" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_l3dg3")

[node name="TileFall" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_vm37w")

[node name="TileMove" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_x0a11")

[connection signal="mouse_entered" from="Area2D" to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_mouse_exited"]
